# qt_demo

./: CMakeLists.txt  res.qrc
bsp/: CMakeLists.txt
bsp/include/bsp/: app.h
bsp/src/: app.cpp
main/: CMakeLists.txt
main/include/main/: loginwidget.h  mainwindow.h  mybotton.h  mylabel.h  student.h  teacher.h  uimainwindow.h  widget.h
main/src/: loginwidget.cpp  loginwidget.ui  main.cpp  mainwindow.cpp  mybotton.cpp  mybotton.ui  mylabel.cpp  student.cpp  teacher.cpp  uimainwindow.cpp  uimainwindow.ui  widget.cpp  widget.ui
